# aictrl-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aictrl/: cli.py  config.py  gitignore.py  loader.py  lockfile.py  merger.py  renderer.py
src/aictrl/targets/: base.py  claude.py  cursor.py
src/aictrl/templates/claude/: settings.json.j2  skill.md.j2  telemetry.sh.j2
src/aictrl/templates/cursor/: hooks.json.j2  telemetry.sh.j2
tests/: conftest.py  test_cli.py  test_loader.py  test_lockfile.py  test_merger.py  test_renderer.py
tests/fixtures/sample-project/.aictrl/: config.yaml
tests/fixtures/sample-project/.aictrl/data/: org.yaml
tests/fixtures/sample-project/.aictrl/data/skills/: code-review.yaml  testing-guide.yaml
tests/fixtures/sample-project/.aictrl/overrides/skills/: code-review.yaml
